test/good/generics/default01.px

func f<T>(T? x: null) T? def
    return x

print f(3), f()
