test/bad/generics/void03.px

func f<T>() T def
    return
    return null

f()
